--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -2,15 +2,43 @@
   <div class="container">
     <div class="nav wrapper">
       <a href="/stories" class="brand-logo center">Social Network</a>
-      <a href="#" data-activates="main-menu" class="button-collapse show-on-large"><i class="fa fa-bars"></i></a>
+      <a href="#" data-activates="main-menu" class="button-collapse show-on-large">
+        <i class="fa fa-bars"></i>
+      </a>
       <!-- right nav -->
       <ul class="right hide-on-small-only">
         {{#if user}}
-          <li><a href="/dashboard">Welcome {{user.firstName}}</a></li>
-          <li><a href="/auth/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
+        <li>
+          <a href="/dashboard">Welcome {{user.firstName}}</a>
+        </li>
+        <li>
+          <a href="/auth/logout">
+            <i class="fa fa-sign-out"></i> Logout</a>
+        </li>
         {{else}}
-          <li><a href="/stories"><i class="fa fa-book"></i> Public Stories</a></li>
+        <li>
+          <a href="/stories">
+            <i class="fa fa-book"></i> Public Stories</a>
+        </li>
         {{/if}}
+      </ul>
+      <!-- side menu -->
+      <ul class="side-nav" id="main-menu">
+
+        {{#if user}} 
+        {{else}}
+        <li>
+          <a class=" btn red darken-1" href="/auth/google">
+            <i class="fa fa-google left"></i> Login with Google Account</a>
+        </li>
+        {{/if}}
+          <li><a href="/stories"><i class="fa fa-book"></i> Public Stories</a></li>
+          {{#if user}}
+          <li class="divider"></li>
+          <li><a href="/dashboard"><i class="fa fa-cog"></i> Dashboard</a></li>
+          <li><a href="/stories/my"><i class="fa fa-user"></i> My Stories</a></li>
+          <li><a href="/auth/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
+          {{/if}}
       </ul>
     </div>
   </div>
