Added hbs helpers

--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -11,14 +11,14 @@
       </div>
       <div class="card-content center-align">
         <h5>{{title}}</h5>
-        <p class="story-text">{{body}}</p>
+        <p class="story-text">{{stripTags (truncate body 150) }}</p> <!--no need for (),only spaces if using one function,otherwise use like here -->
         <br>
         <div class="chip">
           <img src="{{user.image}}"> {{user.firstName}} {{user.lastName}}
         </div>
       </div>
       <div class="card-action center-align">
-        <div class="btn grey" href="/stories/show/{{id}}">Read More</div>
+        <a class="btn grey" href="/stories/show/{{id}}">Read More</a>
       </div>
     </div>
   </div>
