--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -1,1 +1,22 @@
-<h1>Show</h1>
+<div class="row">
+  <div class="col s12 m9">
+    <h3>{{story.title}}</h3>
+    <div class="card story">
+      <div class="card-content">
+        <span class="card-title">{{formatDate story.date 'MMMM Do YYYY'}}</span>
+        {{{story.body}}}  
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m3">
+    <div class="card center-aling">
+      <div class="card-content">
+        <span class="card-title">{{story.user.firstName}} {{story.user.lastName}}</span>
+        <img src="{{story.user.image}}" class="circle responsive-img">
+      </div>
+      <div class="card-action">
+        <a href="/stories/user/{{story.user.id}}">More stories from {{story.user.firstName}}</a>
+      </div>
+    </div>
+  </div>
+</div>
