--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -7,6 +7,26 @@
         {{{story.body}}}  
       </div>
     </div>
+
+    {{#if story.allowComments}}
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">Comments</span>
+          {{#if user}}
+            <form method="post"action="/stories/comment/{{story.id}}">
+              <div class="input-field">
+                <textarea name="commentBody" class="materialize-textarea"></textarea>
+                <label>Add comment</label>
+              </div>
+              <input type="submit" value="Submit" class="btn">
+            </form>
+          {{else}}
+            <p>Please <a href="/auth/google">log</a> in to comment</p>
+          {{/if}}
+        </div>
+      </div>
+    {{/if}}
+
   </div>
   <div class="col s12 m3">
     <div class="card center-aling">
