--- a/views/index/about.handlebars
+++ b/views/index/about.handlebars
@@ -1,3 +1,17 @@
-<h1>About</h1>
-<p>Version 1.0.0</p>
-<p>Social Network Test</p>
+<div class="row">
+  <div class="col s12 m6">
+    <ul class="collection with-header">
+      <li class="collection-header">
+        <h4>Tools I used to create this web app :</h4>
+      </li>
+      <li class="collection-item">NodeJS</li>
+      <li class="collection-item">ExpressJS</li>
+      <li class="collection-item">Google Plus API</li>
+      <li class="collection-item">Google OAuth 2.0</li>
+      <li class="collection-item">MongoDB</li>
+      <li class="collection-item">Mongoose ODM</li>
+      <li class="collection-item">MaterializeCSS</li>
+      <li class="collection-item">Git</li>
+    </ul>
+  </div>
+</div>
